<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_details_neighbour"
    android:layout_width="match_parent"
    android:layout_height="680dp"
    android:background="@color/colorLightGrey"
    tools:context=".ui.neighbour_list.NeighbourDetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/details_frame1"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/details_url_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/details_name_avatar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="@+id/details_url_avatar"
            app:layout_constraintBottom_toBottomOf="@+id/details_url_avatar"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@null"
            android:text="Test"/>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/details_frame2"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/details_frame1">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/details_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Test"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/baseline_location_on_24"
                android:background="@null"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/details_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:gravity="center_vertical"
                android:text="Test"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/baseline_phone_24"
                android:background="@null"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/details_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:gravity="center_vertical"
                android:text="Test"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/baseline_language_24"
                android:background="@null"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/details_profil_url"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:gravity="center_vertical"
                android:text="Test"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/details_frame3"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/details_frame2">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="bottom"
            android:paddingStart="12dp"
            android:paddingBottom="8dp"
            android:text="A propos de moi"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/details_about_me"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="Test"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/details_button_favorite_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/details_frame1"
        app:layout_constraintEnd_toEndOf="@+id/details_frame1"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/baseline_grade_24_grey"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/colorDarkWhite"
        app:borderWidth="0dp"
        app:elevation="0dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/details_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/details_frame1"
        app:layout_constraintStart_toStartOf="@+id/details_frame1"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/colorTrans"
        app:borderWidth="0dp"
        app:elevation="0dp"/>

</android.support.constraint.ConstraintLayout>